--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <section >
     <div class="section3heading"><h1>My Recipies</h1>
-    <p>Here are some of my recipies,Choose which one you like</p></div>
+    <p>Here are some of my recipies,Choose which one you like and grab it from us as soon as possible!</p></div>
     <div class="flexible-container">
         
         
